--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
       { "handle": "filesystem" },
       {
         "src": ".*",
-        "dest": "/index.html"
+        "dest": "src/index.html"
       }
     ]
   }
